[gd_scene load_steps=4 format=3 uid="uid://d0scv6pdk1jbl"]

[ext_resource type="Texture2D" uid="uid://bun0txes47vvo" path="res://asset/Tiny RPG Character Asset Pack v1.03b -Free Soldier&Orc/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Arrow(Projectile)/Arrow01(32x32).png" id="1_jxg7w"]
[ext_resource type="Script" path="res://arrow.gd" id="2_bttnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhc58"]
size = Vector2(18, 6)

[node name="arrow" type="Area2D"]
z_index = 1
collision_layer = 32
collision_mask = 6
script = ExtResource("2_bttnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_nhc58")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jxg7w")

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
